--- a/SportsStore/Views/Home/Index.cshtml
+++ b/SportsStore/Views/Home/Index.cshtml
@@ -1,2 +1,11 @@
 ﻿
-<h4>Welcome to SportsStore</h4>
+@model IQueryable<Product>
+
+@foreach (var p in Model ?? Enumerable.Empty<Product>())
+{
+    <div>
+        <h3>@p.Name</h3>
+        @p.Description
+        <h4>@p.Price.ToString("c")</h4>
+    </div>
+}
